frame/support/test/tests/pallet_ui/step_010.stderr
error: expected `Module`
 --> $DIR/step_010.rs:7:13
  |
7 |     pub struct Foo {}
  |                ^^^
